# GUI-YOLOv8-OBB-4-STREAMS

./: .gitignore  LICENSE  Makefile  README.md  config.json  download_weights.py  main.py  pyproject.toml  requirements.txt  setup.cfg
bakup/: config.json
docs/: README-DOCS.md  mkdocs.yml
docs/docs/: getting-started.md  index.md  rus.md  russian.md
models/: classes-obb.txt  classes.txt
notebooks/: Vtormet_VOP.ipynb  tets.ipynb
src/models/base/: yolov8_base.py
src/models/obb/: yolo_obb_pt.py
src/qt/stream/: ai_worker.py  draw_area.py  video_capture.py  visualize.py
src/qt/video/: video_worker.py
src/ui/: apprcc_rc.py  setting_window.py  tab_widget.py  ui_setting_gui.py  ui_tab_widget.py  ui_tab_widget.ui
src/utils/: boxes.py  config.py  create_env.py  db_config.py  general.py  logging_config.py  visualize.py
