[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vtormet_cv"
version = "0.0.1"
description = "detection of explosive objects (HEH) in scrap metal"
authors = [
  { name = "Oleg Shamaev" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["vtormet_cv"]
force_sort_within_sections = true
